--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow the <a href="https://baidu.com">link to example.com</a>.</p>
+    <p>If you are not redirected automatically, follow the <a href="https://baidu.com">link to baidu.com</a>.</p>
 </body>
 </html>
