--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://baidu.com">
     <title>Redirecting...</title>
+    <script type="text/javascript">
+        window.location.href = "https://baidu.com";
+    </script>
 </head>
 <body>
     <p>If you are not redirected automatically, follow the <a href="https://baidu.com">link to baidu.com</a>.</p>
