--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, follow the <a href="https://baidu.com">link to baidu.com</a>.</p>
+    <p>  <a href="https://baidu.com">link to baidu.com</a>.</p>
 </body>
 </html>
