--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 <body>
     <h1>Welcome to the Redirect Service</h1>
     <input type="text" id="urlField" placeholder="Enter URL here">
-    <button onclick="redirectToServer()">Redirect</button>
+    <button onclick="redirectToServer()">Redirect</customer_service></button>
 
     <script>
         function redirectToServer() {
             var url = document.getElementById('urlField').value;
-            window.location.href = 'http://198.176.63.132/redirect.php?target=' + encodeURIComponent(url);
+            // 注意更新了端口号和可能的路径
+            window.location.href = 'http://198.176.63.132:8080/redirect?target=' + encodeURIComponent(url);
         }
     </script>
 </body>
