--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         const target = params.get('target');
         if (target) {
             // 传递参数给香港服务器
-            window.location.href = 'http://198.176.63.132:8080/redirect?target=' + encodeURIComponent(target);
+            window.location.href = 'http://zhogeo.top/redirect?target=' + encodeURIComponent(target);
         } else {
             document.body.innerHTML = '<p>Invalid or missing target parameter.</p>';
         }
